name:                chainFlyer
version:             0.1.0.0
synopsis:            Bindings to chainFlyer's API.
description:         Please see README.md
homepage:            https://github.com/lotz84/chainFlyer
license:             BSD3
license-file:        LICENSE
author:              Tatsuya Hirose
maintainer:          tatsuya.hirose.0804@gmail.com
copyright:           2015 Tatsuya Hirose
category:            Bitcoin, Finance, Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ChainFlyer
                     , ChainFlyer.Types
  build-depends:       base >= 4.7 && < 5
                     , aeson >=0.8 && <0.11
                     , http-conduit >=2.1 && <2.2
  default-language:    Haskell2010

executable chainFlyer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chainFlyer
  default-language:    Haskell2010

test-suite chainFlyer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chainFlyer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lotz84/chainFlyer
