name:                chainFlyer
version:             0.2.0.0
synopsis:            Bindings to chainFlyer's API.
description:         Please see README.md
homepage:            https://github.com/lotz84/chainFlyer
license:             BSD3
license-file:        LICENSE
author:              Tatsuya Hirose
maintainer:          tatsuya.hirose.0804@gmail.com
copyright:           2015 Tatsuya Hirose
category:            Bitcoin, Finance, Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.ChainFlyer
                     , Servant.ChainFlyer.Client
                     , Servant.ChainFlyer.Types.Block
                     , Servant.ChainFlyer.Types.Transaction
                     , Servant.ChainFlyer.Types.Address
  build-depends:       base >= 4.7 && < 5
                     , time
                     , aeson
                     , either
                     , servant
                     , servant-client
  default-language:    Haskell2010

executable chainFlyer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , transformers
                     , either
                     , chainFlyer
  default-language:    Haskell2010

test-suite chainFlyer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chainFlyer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lotz84/chainFlyer
